tests/golden/compile-fail/trait_bound_method_wrong_type.rua
trait Adder {
    fn add(&self, value: i64) -> i64;
}

fn add<T: Adder>(target: T) -> i64 {
    target.add(false)
}
